<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_sea"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.houselistingmashup.MainActivity" >


	<TextView
        android:id="@+id/search_desc"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:text="@string/search_intro" />

	<TextView
        android:id="@+id/streetaddress_label"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/street_address_label" />

	<EditText
	    android:id="@+id/streetaddress"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/white" 
	    android:hint="@string/address_hint"
	    android:inputType="textCapWords|textNoSuggestions|textPostalAddress" />

	<TextView
        android:id="@+id/address_error"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:text="" />
	
	<TextView	
        android:id="@+id/city_label"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_label" />

	<EditText
	    android:id="@+id/city"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/white"
	    android:hint="@string/city_hint"
	    android:inputType="textCapWords|textPostalAddress|textAutoComplete|textAutoCorrect" />

	<TextView
        android:id="@+id/city_error"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:text="" />
	
	<TextView
        android:id="@+id/state_label"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_label" />

	<Spinner
	    android:id="@+id/state"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/white"
	    android:entries="@array/state_array"
	    android:prompt="@string/state_hint"
	    android:hint="@string/state_hint" 
	    android:spinnerMode="dialog" />
	
	<TextView
        android:id="@+id/state_error"
 		android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:text="" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    android:orientation="horizontal">

		<Button
		    android:id="@+id/searchButton"
		    android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content"
    		android:text="@string/search_button" />

		<ImageView
		    android:id="@+id/zillow_tag"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:clickable="true"
		    android:contentDescription="@string/zillow_description"
		    android:scaleType="fitEnd"
		    android:src="@drawable/zillow_logo" />

	</LinearLayout>
			
	<View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/white"/>
	
	<TextView
        android:id="@+id/no_result"
 		android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:visibility="invisible"
        android:text="@string/no_result"/>
	
	
</LinearLayout>