<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.houselistingmashup.ZillowTab$HistoricalEstimatesFragment" >

     <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp" 
        android:textSize="16sp" />
   
     <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="12sp" />
    
    <ImageView
		    android:id="@+id/hist_image"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:adjustViewBounds="true"
		    android:layout_marginBottom="10dp"
		    android:contentDescription="@string/zillow_description" />

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal" >
	    
	    <Button
			    android:id="@+id/prev_button"
			    android:layout_width="wrap_content"
	   		 	android:layout_height="wrap_content"
	    		android:text="@string/prev_button"  />
	    
	    <Button
			    android:id="@+id/next_button"
			    android:layout_width="wrap_content"
	   		 	android:layout_height="wrap_content"
	    		android:text="@string/next_button" />
	  
	 </LinearLayout>
	 
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_marginBottom="2dp"
        android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/zillow_year1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="12sp"
	        android:gravity="center"
	        android:text="@string/zillow_copyright" />
	    
	    <TextView
	        android:id="@+id/terms_of_use1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:gravity="center" />
		    
	    <TextView
	        android:id="@+id/zestimate1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:gravity="center" />
	    
	</LinearLayout>
</LinearLayout>
