<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.houselistingmashup.ZillowTab$BasicInfoFragment" >
       
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:scrollbars="none"
	    android:layout_weight="1">
 	
	    <TableLayout
	        android:id="@+id/basic_info_table"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:background="@drawable/cell_border"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkout_intro"
                android:layout_weight="0.75" />

            <Button
                android:id="@+id/shareButton"
                style="@style/com_facebook_loginview_default_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.25"
                android:background="@drawable/fb_button"
                android:drawableLeft="@drawable/com_facebook_inverse_icon"
                android:drawableStart="@drawable/com_facebook_inverse_icon"
                android:gravity="center"
                android:paddingBottom="0dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="0dp"
                android:text="@string/share"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            
            </TableRow>
	    </TableLayout>
	    
	</ScrollView>

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_marginBottom="2dp"
        android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/zillow_year"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="12sp"
	        android:gravity="center"
	        android:text="@string/zillow_copyright" />
	    
	    <TextView
	        android:id="@+id/terms_of_use"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:gravity="center" />
		    
	    <TextView
	        android:id="@+id/zestimate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:gravity="center" />
	    
	</LinearLayout>
</LinearLayout>
